WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194097
Fix LSAppLink deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=194097
Summary
Fix LSAppLink deprecation warnings
Timothy Hatcher
Reported
2019-01-31 10:32:09 PST
There are a couple deprecation warnings we need to fix in WKActionSheetAssistant.
Attachments
Patch
(2.71 KB, patch)
2019-01-31 10:35 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-01-31 10:35:54 PST
Created
attachment 360740
[details]
Patch
Timothy Hatcher
Comment 2
2019-01-31 10:46:07 PST
<
rdar://problem/47697219
>
WebKit Commit Bot
Comment 3
2019-01-31 11:15:04 PST
Comment on
attachment 360740
[details]
Patch Clearing flags on attachment: 360740 Committed
r240798
: <
https://trac.webkit.org/changeset/240798
>
WebKit Commit Bot
Comment 4
2019-01-31 11:15:05 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2019-01-31 11:50:33 PST
Comment on
attachment 360740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=360740&action=review
> Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:442 > +#pragma clang diagnostic push > +#pragma clang diagnostic ignored "-Wdeprecated-declarations"
ALLOW_DEPRECATED_DECLARATIONS_BEGIN
> Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:444 > +#pragma clang diagnostic pop
ALLOW_DEPRECATED_DECLARATIONS_END
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug