Fix LSAppLink deprecation warnings. https://bugs.webkit.org/show_bug.cgi?id=194097

Unreviewed build fix.


* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant _appendOpenActionsForURL:actions:elementInfo:]):


Canonical link: https://commits.webkit.org/208577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240798 268f45cc-cd09-0410-ab3c-d52691b4dbfc